--- a/eureka-server/pom.xml
+++ b/eureka-server/pom.xml
@@ -4,50 +4,37 @@
    <modelVersion>4.0.0</modelVersion>
 
    <groupId>de.thtesche</groupId>
-   <artifactId>user-service</artifactId>
+   <artifactId>eureka-server</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>
 
-   <name>Demo: UserService</name>
-   <description>Demo microservice holding user informaton</description>
+   <name>Demo: Service Discovery (Eureka)</name>
+   <description>Service Discovery (Eureka)</description>
 
    <parent>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-parent</artifactId>
-      <version>1.3.0.RELEASE</version>
-      <relativePath/>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-parent</artifactId>
+      <version>1.0.2.RELEASE</version>
+      <relativePath/> 
    </parent>
 
    <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <java.version>1.8</java.version>
-      <docker.image.prefix>thtesche</docker.image.prefix>
+      <docker.image.prefix>thtesche</docker.image.prefix>      
    </properties>
-   
+
    <dependencies>
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-actuator</artifactId>
       </dependency>
+      
       <dependency>
          <groupId>org.springframework.cloud</groupId>
-         <artifactId>spring-cloud-starter-eureka</artifactId>
-         <version>1.0.4.RELEASE</version>
-      </dependency>
-      <dependency>
-         <groupId>org.springframework.boot</groupId>
-         <artifactId>spring-boot-starter-data-jpa</artifactId>
-      </dependency>
-      <dependency>
-         <groupId>org.springframework.boot</groupId>
-         <artifactId>spring-boot-starter-data-rest</artifactId>
+         <artifactId>spring-cloud-starter-eureka-server</artifactId>
       </dependency>
 		
-      <dependency>
-         <groupId>org.hsqldb</groupId>
-         <artifactId>hsqldb</artifactId>
-         <scope>runtime</scope>
-      </dependency>
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-test</artifactId>
@@ -61,7 +48,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-maven-plugin</artifactId>
          </plugin>
-         <plugin>
+    <plugin>
             <groupId>com.spotify</groupId>
             <artifactId>docker-maven-plugin</artifactId>
             <version>0.2.3</version>
@@ -84,7 +71,7 @@
                   </resource>
                </resources>
             </configuration>
-         </plugin>
+         </plugin>         
       </plugins>
    </build>
 	
