--- a/user-service/src/main/resources/application.yml
+++ b/user-service/src/main/resources/application.yml
@@ -3,3 +3,14 @@
 spring:
   application:
     name: user-service
+    
+server:
+   port: 10080
+   
+eureka:
+   instance:
+      preferIpAddress: true
+   client:
+      serviceUrl:
+         defaultZone: http://eureka-server:8761/eureka/   
+ 
