--- a/zuul-proxy/pom.xml
+++ b/zuul-proxy/pom.xml
@@ -4,57 +4,46 @@
    <modelVersion>4.0.0</modelVersion>
 
    <groupId>de.thtesche</groupId>
-   <artifactId>user-service</artifactId>
+   <artifactId>zuul-proxy</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>
 
-   <name>Demo: UserService</name>
-   <description>Demo microservice holding user informaton</description>
+   <name>Demo: Zuul Proxy</name>
+   <description>Demo Zuul proxy (api gateway)</description>
 
    <parent>
-      <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-starter-parent</artifactId>
-      <version>1.3.0.RELEASE</version>
-      <relativePath/>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-parent</artifactId>
+      <version>1.0.2.RELEASE</version>
+      <relativePath/> 
    </parent>
 
    <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <java.version>1.8</java.version>
-      <docker.image.prefix>thtesche</docker.image.prefix>
+      <docker.image.prefix>thtesche</docker.image.prefix>      
    </properties>
-   
+
    <dependencies>
       <dependency>
-         <groupId>org.springframework.boot</groupId>
-         <artifactId>spring-boot-starter-actuator</artifactId>
-      </dependency>
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-starter-zuul</artifactId>
+      </dependency>      
       <dependency>
          <groupId>org.springframework.cloud</groupId>
          <artifactId>spring-cloud-starter-eureka</artifactId>
-         <version>1.0.4.RELEASE</version>
-      </dependency>
+      </dependency>      
       <dependency>
          <groupId>org.springframework.boot</groupId>
-         <artifactId>spring-boot-starter-data-jpa</artifactId>
-      </dependency>
-      <dependency>
-         <groupId>org.springframework.boot</groupId>
-         <artifactId>spring-boot-starter-data-rest</artifactId>
-      </dependency>
-		
-      <dependency>
-         <groupId>org.hsqldb</groupId>
-         <artifactId>hsqldb</artifactId>
-         <scope>runtime</scope>
-      </dependency>
+         <artifactId>spring-boot-starter-actuator</artifactId>
+      </dependency>      
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-test</artifactId>
          <scope>test</scope>
       </dependency>
    </dependencies>
-	
+
    <build>
       <plugins>
          <plugin>
@@ -84,7 +73,7 @@
                   </resource>
                </resources>
             </configuration>
-         </plugin>
+         </plugin>         
       </plugins>
    </build>
 	
