--- a/zuul-proxy/src/main/docker/Dockerfile
+++ b/zuul-proxy/src/main/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM java:8
 VOLUME /tmp
-ADD user-service-1.0.0-SNAPSHOT.jar app.jar
+ADD zuul-proxy-1.0.0-SNAPSHOT.jar app.jar
 RUN bash -c 'touch /app.jar'
-EXPOSE 10080
+EXPOSE 8080
 ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app.jar"]
