Make user-service as a resource server

--- a/authserver/pom.xml
+++ b/authserver/pom.xml
@@ -21,6 +21,7 @@
    <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <java.version>1.8</java.version>
+      <docker.image.prefix>thtesche</docker.image.prefix>      
    </properties>
 
    <dependencies>
@@ -33,10 +34,17 @@
          <artifactId>spring-boot-starter-web</artifactId>
       </dependency>
       <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-actuator</artifactId>
+      </dependency>      
+      <dependency>
          <groupId>org.springframework.security.oauth</groupId>
          <artifactId>spring-security-oauth2</artifactId>
       </dependency>		
-      
+      <dependency>
+         <groupId>org.springframework.boot</groupId>
+         <artifactId>spring-boot-starter-thymeleaf</artifactId>
+      </dependency>      
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-test</artifactId>
@@ -49,6 +57,30 @@
          <plugin>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-maven-plugin</artifactId>
+         </plugin>
+         <plugin>
+            <groupId>com.spotify</groupId>
+            <artifactId>docker-maven-plugin</artifactId>
+            <version>0.2.3</version>
+            <executions>
+               <execution>
+                  <phase>package</phase>
+                  <goals>
+                     <goal>build</goal>
+                  </goals>
+               </execution>
+            </executions>            
+            <configuration>
+               <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+               <dockerDirectory>${project.basedir}/src/main/docker</dockerDirectory>
+               <resources>
+                  <resource>
+                     <targetPath>/</targetPath>
+                     <directory>${project.build.directory}</directory>
+                     <include>${project.build.finalName}.jar</include>
+                  </resource>
+               </resources>
+            </configuration>
          </plugin>
       </plugins>
    </build>
