--- a/authserver/src/main/resources/application.properties
+++ b/authserver/src/main/resources/application.properties
@@ -1,11 +1,5 @@
-# To change this license header, choose License Headers in Project Properties.
-# To change this template file, choose Tools | Templates
-# and open the template in the editor.
 
 server.port=9999
+server.contextPath=/uaa
 security.user.password=password
-
-security.oauth2.client.clientId: acme
-security.oauth2.client.clientSecret: acmesecret
-security.oauth2.client.authorized-grant-types: authorization_code,refresh_token,password
-security.oauth2.client.scopes: read, write
+logging.level.org.springframework.security=DEBUG
