--- a/user-service/pom.xml
+++ b/user-service/pom.xml
@@ -14,7 +14,7 @@
    <parent>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-parent</artifactId>
-      <version>1.3.0.RELEASE</version>
+      <version>1.3.1.RELEASE</version>
       <relativePath/>
    </parent>
 
@@ -42,7 +42,10 @@
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-data-rest</artifactId>
       </dependency>
-		
+      <dependency>
+         <groupId>org.springframework.security.oauth</groupId>
+         <artifactId>spring-security-oauth2</artifactId>
+      </dependency>
       <dependency>
          <groupId>org.hsqldb</groupId>
          <artifactId>hsqldb</artifactId>
