--- a/auth-server/pom.xml
+++ b/auth-server/pom.xml
@@ -4,12 +4,12 @@
    <modelVersion>4.0.0</modelVersion>
 
    <groupId>com.thtesche</groupId>
-   <artifactId>authserver</artifactId>
+   <artifactId>auth-server</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>jar</packaging>
 
-   <name>Demo: Authserver</name>
-   <description>Demo Authserver (api gateway)</description>
+   <name>Demo: Auth Server</name>
+   <description>Demo Authentication server to secure api's with OAuth2</description>
 
    <parent>
       <groupId>org.springframework.boot</groupId>
@@ -42,9 +42,10 @@
          <artifactId>spring-security-oauth2</artifactId>
       </dependency>		
       <dependency>
-         <groupId>org.springframework.boot</groupId>
-         <artifactId>spring-boot-starter-thymeleaf</artifactId>
-      </dependency>      
+         <groupId>org.springframework.cloud</groupId>
+         <artifactId>spring-cloud-starter-eureka</artifactId>
+         <version>1.0.4.RELEASE</version>
+      </dependency>    
       <dependency>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-test</artifactId>
